# GameOfLife

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: Case.hpp  FileService.hpp  Game.hpp  Grid.hpp  I18n.hpp  Include.hpp  Logger.hpp  RegularTask.hpp  Window.hpp
locales/: en.json  fr.json
src/: Case.cpp  FileService.cpp  Game.cpp  Grid.cpp  I18n.cpp  Logger.cpp  RegularTask.cpp  Window.cpp  main.cpp
